--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@nx/angular": "17.1.3",
+    "marked": "^9.1.6",
+    "ngx-markdown": "^17.1.1",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -44,6 +47,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "autoprefixer": "^10.4.0",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
@@ -51,7 +55,9 @@
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "17.1.3",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
