--- a/project.json
+++ b/project.json
@@ -2,7 +2,7 @@
   "name": "angular-v17",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "angular-v17",
+  "prefix": "app",
   "sourceRoot": "./src",
   "tags": [],
   "targets": {
@@ -16,8 +16,8 @@
         "polyfills": ["zone.js"],
         "tsConfig": "./tsconfig.app.json",
         "assets": ["./src/favicon.ico", "./src/assets"],
-        "styles": ["./src/styles.css"],
-        "scripts": []
+        "styles": ["./src/styles.css","node_modules/prismjs/themes/prism-okaidia.css", "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css"],
+        "scripts": ["node_modules/prismjs/prism.js", "node_modules/prismjs/components/prism-css.min.js","node_modules/prismjs/components/prism-typescript.min.js", "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"]
       },
       "configurations": {
         "production": {
